28.11/appleegress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: appleegress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: apple
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: banana
      ports:
        - port: 80
