28.11/appleingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: appleingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: apple
  policyTypes:
    - Ingress
  ingress:
    - {}
